--- a/TestTaskAndroid/AndroidManifest.xml
+++ b/TestTaskAndroid/AndroidManifest.xml
@@ -22,7 +22,8 @@
         	android:value="@string/games_app_id" />
    		<activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
