--- a/TestTaskAndroid/AndroidManifest.xml
+++ b/TestTaskAndroid/AndroidManifest.xml
@@ -18,8 +18,9 @@
         android:theme="@style/AppTheme" >
         <meta-data android:name="com.google.android.gms.version"
         	android:value="@integer/google_play_services_version" />
-         <meta-data android:name="com.google.android.gms.games.APP_ID"
+        <meta-data android:name="com.google.android.gms.games.APP_ID"
         	android:value="@string/games_app_id" />
+         
    		<activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -30,9 +31,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+        
+        <activity android:name="com.vk.sdk.VKOpenAuthActivity" />
     </application>
 
 </manifest>
