--- a/JatxMusic/MusicTransmitterAndroid/AndroidManifest.xml
+++ b/JatxMusic/MusicTransmitterAndroid/AndroidManifest.xml
@@ -14,12 +14,12 @@
     
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon_transmitter_96"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light" >
         <activity
             android:name=".MusicTransmitterActivity"
-            android:icon="@drawable/ic_launcher"
+            android:icon="@drawable/icon_transmitter_96"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
