--- a/JatxMusic/MusicReceiverAndroid/AndroidManifest.xml
+++ b/JatxMusic/MusicReceiverAndroid/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jatx.musicreceiver.android"
-    android:versionCode="1"
-    android:versionName="1.0beta" >
+    android:versionCode="2"
+    android:versionName="1.0beta2" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -13,11 +13,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:icon="@drawable/icon_receiver_96"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.Light" >
         <activity
             android:name=".MusicReceiverActivity"
-            android:icon="@drawable/ic_launcher"
+            android:icon="@drawable/icon_receiver_96"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
