--- a/JatxMusic/MusicTransmitterAndroid/AndroidManifest.xml
+++ b/JatxMusic/MusicTransmitterAndroid/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jatx.musictransmitter.android"
-    android:versionCode="1"
-    android:versionName="1.0beta" >
+    android:versionCode="4"
+    android:versionName="1.0beta3" >
 
     <uses-sdk
         android:minSdkVersion="8"
