--- a/JatxMusic/MusicTransmitterAndroid/project.properties
+++ b/JatxMusic/MusicTransmitterAndroid/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=..\\..\\LIBS_ANDROID\\android-support-v7-appcompat
-android.library.reference.2=..\\..\\LIBS_ANDROID\\aFileDialog
+android.library.reference.1=../../appcompat_v7
+android.library.reference.2=../../LIBS_ANDROID/aFileDialog
