--- a/JatxMusic/MusicReceiverAndroid/AndroidManifest.xml
+++ b/JatxMusic/MusicReceiverAndroid/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jatx.musicreceiver.android"
-    android:versionCode="2"
-    android:versionName="1.0beta2" >
+    android:versionCode="4"
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -10,6 +10,7 @@
     
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
